Fixed rounded borders portfolio items on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -563,6 +563,7 @@ ul#nav {
 		max-width: 29%;
 		margin: 2%;
 		min-width: 150px;
+		border-radius: 8px;
 		
 		.portfolio-item-meta {
 			padding: 18px;
@@ -613,7 +614,6 @@ ul#nav {
 			transition: all 0.2s $transitionStyle;;
 			border-radius: 8px;
 			&:hover {
-				border-radius: 7px;
 				box-shadow:
 					0 2.1px 2.2px -2px rgba(0, 0, 0, 0.048),
 					0 5.1px 5.3px -2px rgba(0, 0, 0, 0.069),
@@ -634,6 +634,7 @@ ul#nav {
 				vertical-align: bottom;
 				transition: all 0.2s $transitionStyle;;
 				transform: scale(1);
+				border-radius: 8px;
 			}
 
 			a {
@@ -644,6 +645,7 @@ ul#nav {
 				position: absolute;
 				left: 0;
 				top: 0;
+				border-radius: 8px;
 				width: 100%;
 				height: 100%;
 				opacity: 0;
